Fixing build issues on dashboard app

--- a/src/backend/web/web.admin/dashboard/src/app/components/account/login/login.component.html
+++ b/src/backend/web/web.admin/dashboard/src/app/components/account/login/login.component.html
@@ -6,7 +6,7 @@
         type</a> and redirects to the IdentityServer instance to perform the authentication step. Before you can login
       here, you must <a routerLink="#">register a new account</a>.</p>
     <p>
-      <mat-spinner-button color="primary" [options]="loginButtonsOpts" (click)="login()"></mat-spinner-button>
+      <button mat-button> color="primary" (click)="login()"></button>
     </p>
   </div>
 </mat-card>
