--- a/src/backend/web/web.admin/dashboard/src/app/components/foods/add/add.component.html
+++ b/src/backend/web/web.admin/dashboard/src/app/components/foods/add/add.component.html
@@ -38,7 +38,7 @@
     </mat-card-content>
     <mat-card-actions align='end'>
       <div style="margin-top: 20px">
-        <mat-spinner-button class="save-button" [options]="saveButtonsOpts" type="submit">Save</mat-spinner-button>
+        <button class="save-button" type="submit">Save</button>
         <button mat-raised-button type="button" (click)="onCancel()">Cancel</button>
       </div>
     </mat-card-actions>
