--- a/src/backend/web/web.admin/dashboard/src/app/components/categories/add/add.component.html
+++ b/src/backend/web/web.admin/dashboard/src/app/components/categories/add/add.component.html
@@ -10,8 +10,8 @@
             [(ngModel)]="category.color" name="color" #color="ngModel"/>
       </mat-form-field >
     <mat-card-actions>
-      <mat-spinner-button [options]="saveButtonsOpts" type="submit">Save</mat-spinner-button>
-      <button mat-button type="button" (click)="onCancel()">Cancel</button>
+      <button> type="submit">Save</button>
+      <button> type="button" (click)="onCancel()">Cancel</button>
     </mat-card-actions>
   </form>
 </mat-card>
